--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-job-preference/create-candidate-job-preference.component.html
@@ -47,7 +47,7 @@
       </div>
     </div>
   </div>
-  <div class="row mt-2">
+<!--   <div class="row mt-2">
 
     <div class="col-lg-6 col-md-6">
       <div class=" form-group">
@@ -80,7 +80,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <div class="row mt-2">
     <div class="col-lg-4 col-md-6">
       <div class=" form-group">
@@ -97,6 +97,17 @@
         </div>
       </div>
     </div>
+	<div class="col-lg-4 col-md-6">
+      <div class=" form-group">
+        <label>&nbsp;</label>
+         <div class="mt-2">
+          <div class="custom-control custom-checkbox mr-sm-2">
+            <input formControlName="remote_only" (change)="onChangeFieldValue('remote_only', $event?.target?.checked)" type="checkbox" class="custom-control-input" id="OnlyRemote">
+            <label class="custom-control-label" for="OnlyRemote">{{"postYourResume.onlyRemote" | translate }}</label>
+           </div>
+        </div>
+      </div>
+    </div>
     <div class="col-lg-4 col-md-6" *ngIf="(!childForm?.value?.jobPref?.remote_only && !childForm?.value?.jobPref?.willing_to_relocate)">
       <div class=" form-group">
         <label>{{"postYourResume.preferredLocation" | translate }}</label>
@@ -110,5 +121,55 @@
       </div>
     </div>
   </div>
+<div class="row mt-2">
+		<div class="col-lg-12 col-md-6">
+			<div class=" form-group">
+				<label>{{"postYourResume.selectcountry" | translate }} </label>
+				<div class="pt-2">
+					<button type="button" class="btn btn-fltr" id="226" (click)="countryClick('United States',$event);">United States</button>
+					<button type="button" class="btn btn-fltr" id="225"  (click)="countryClick('United Kingdom',$event);">United Kingdom</button>
+					<button type="button" class="btn btn-fltr" id="13"  (click)="countryClick('Australia',$event);">Australia</button>
+					<button type="button" class="btn btn-fltr" id="99"  (click)="countryClick('India',$event);">India</button>
+					<button type="button" class="btn btn-fltr" id="192"  (click)="countryClick('Singapore',$event);">Singapore</button>
+					<button type="button" class="btn btn-fltr" id="73"  (click)="countryClick('France',$event);">France</button>
+					<button type="button" class="btn btn-fltr" id="38"  (click)="countryClick('Canada',$event);">Canada</button>
+					<button type="button" class="btn btn-fltr" id="107"  (click)="countryClick('Japan',$event);">Japan</button>
+					<button type="button" class="btn btn-fltr" id="129"  (click)="countryClick('Malaysia',$event);">Malaysia</button>
+					<!-- <button type="button" class="btn btn-fltr bg-light">Others</button> -->
+				</div>
+			</div>
+		</div>
+	</div>
+	  <div class="row mt-2">
+		<div class="col-lg-10 col-md-6">
+			<div class=" form-group">
+				<label>{{"postYourResume.othercountry" | translate }} </label> 
+				<ngx-select
+					class="text-capitalize"
+					[placeholder]="'Other Country'"
+					[multiple]="true"
+					[items]="othercountry"
+					formControlName="preferred_countries"
+					optionValueField="id"
+					optionTextField="nicename"
+					autoClearSearch="true"
+					noResultsFound="No results found"
+					 >
+				 <ng-template ngx-select-option-selected let-option let-text="text">
+				  {{option?.text ? option?.text?.split('-')[0] : ''}}
+				</ng-template>
 
+				<ng-template ngx-select-option let-option let-text="text">
+					{{option?.text}}
+				</ng-template>
+
+				<ng-template ngx-select-option-not-found>
+					Nothing found
+				</ng-template>
+				 </ngx-select>
+				<app-control-messages [control]="f['preferred_countries']"></app-control-messages>									  
+			</div>
+		</div>				
+		
+	</div>
 </div>
