--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.css
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.css
@@ -34,3 +34,25 @@
   font-size: 18px;
   color: #a8a8a8;
 }
+.btn-fltr {
+    color: #212529;
+    background-color: #ffffff;
+    border-color: #ffffff;
+    box-shadow: 2px 2px 2px 1px #dfdfdf;
+    margin-right: 10px;
+    margin-bottom: 14px;
+    padding: 4px 8px;
+    font-size: 12px;
+}
+.btn-fltr:hover {
+    background-color: #ffffff;
+    border-color: #ffd3e2;
+    box-shadow: 3px 3px 3px 2px #dfdfdf;
+    color: #ff2972;
+}
+.btn-fltr-active {
+    background-color: #ffffff;
+    border-color: #ffd3e2;
+    box-shadow: 3px 3px 3px 2px #dfdfdf;
+    color: #ff2972;
+}
