--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-personal-details/create-candidate-personal-details.component.html
@@ -44,8 +44,8 @@
           [maxLength]="15"  (countryChange)="onCountryChange($event)" [cssClass]="'form-control'" [preferredCountries]="preferredCountries"
           [enableAutoCountrySelect]="true" [enablePlaceholder]="true" [searchCountryFlag]="true"
           [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]" [selectFirstCountry]="false"
-          [selectedCountryISO]="CountryISO.UnitedStates" [maxLength]="15" [tooltipField]="TooltipLabel.Name"
-          [phoneValidation]="false" [separateDialCode]="separateDialCode"
+          [selectedCountryISO]="CountryISO.UnitedStates" [tooltipField]="TooltipLabel.Name"
+          [phoneValidation]="true" [separateDialCode]="separateDialCode"
           [numberFormat]="PhoneNumberFormat.National" name="phone" formControlName="phone">
         </ngx-intl-tel-input>
           <!-- <input ng2TelInput [ng2TelInputOptions]="{initialCountry: childForm?.value?.personalDetails?.country}" (countryChange)="onCountryChange($event)"  appMarkAsterisk numbersOnly formControlName="phone" type="text" class="form-control" placeholder="9876543210"> -->
@@ -89,7 +89,171 @@
         </div>
       </div>
     </div>
+	<div class="row mt-2">
+		<div class="col-lg-4 col-md-6">
+			<div class=" form-group">
+				<label>{{"postYourResume.nationality" | translate }} </label>  <select appMarkAsterisk formControlName="nationality" class="form-control">
+					<option value="-1">Please Select {{"postYourResume.nationality" | translate }}</option>
+					<option *ngFor="let name of nationality" value={{name.id}}>{{name.nicename}}</option>
+				  </select>		
+			  <app-control-messages [control]="f['nationality']"></app-control-messages>							  
+			</div>
+		</div>				
+		<div class="col-lg-4 col-md-6">
+			<div class=" form-group">
+				<label>{{"postYourResume.previousemployers" | translate }}</label>
+				<ng-select appMarkAsterisk id="clients_worked" [addTag]="true" addTagText="Add Previous Employer" bindValue="label"
+				  bindLabel="label" placeholder="Select item" appendTo="body" multiple="true"
+				  formControlName="clients_worked">
+				</ng-select>
+				<!-- <input type="text" class="form-control" placeholder="Ex. Microsoft, Google, Facebook, SAP"> -->
+				<app-control-messages [control]="f['clients_worked']"></app-control-messages>
+				
+			</div>
+		</div>	
+	</div>
+	  <div class="row mt-2">
+		<div class="col-lg-5 col-md-6">
+		  <div class=" form-group">
+			<label>{{"postJob.workAuthorization" | translate }}</label>
+			<div appMarkAsterisk class="mt-2">
+			  <div class="custom-control custom-radio custom-control-inline">
+				<input (change)="onChangeFieldValue('work_authorization', 0)" [value]="0" formControlName="work_authorization" type="radio" id="customRadioInline5"
+				  name="work_authorization" class="custom-control-input">
+				<label class="custom-control-label"
+				  for="customRadioInline5">{{"postYourResume.iHaveWorkAuthorization" | translate }}</label>
+			  </div>
+			  <div class="custom-control custom-radio custom-control-inline">
+				<input (change)="onChangeFieldValue('work_authorization', 1)" [value]="1" formControlName="work_authorization" type="radio" id="customRadioInline6"
+				  name="work_authorization" class="custom-control-input">
+				<label class="custom-control-label"
+				  for="customRadioInline6">{{"postYourResume.iNeedVisaAponsorship" | translate }}</label>
+			  </div>
+			  <app-control-messages [control]="f['work_authorization']"></app-control-messages>
+			</div>
+		  </div>
+		</div>
+		<div class="col-lg-4 col-md-6">
+			<div class=" form-group">
+				<label>{{"postYourResume.visatype" | translate }}</label>
+				<ng-select appMarkAsterisk id="visa_type" [addTag]="true" addTagText="Add prevoiusemployers " bindValue="label" bindLabel="label" placeholder="Ex. H1B, H2B" appendTo="body" multiple="true" formControlName="visa_type">
+				</ng-select>
+				<app-control-messages [control]="f['visa_type']"></app-control-messages>	
+			</div>
+		</div>	
+	  </div>
+	  <div class="row mt-2">
+		<div class="col-lg-12 col-md-6">
+			<div class=" form-group">
+				<label>{{"postYourResume.selectcountry" | translate }} </label>
+				<div class="pt-2">
+					<button type="button" class="btn btn-fltr" id="226" (click)="countryClick('United States',$event);">United States</button>
+					<button type="button" class="btn btn-fltr" id="225"  (click)="countryClick('United Kingdom',$event);">United Kingdom</button>
+					<button type="button" class="btn btn-fltr" id="13"  (click)="countryClick('Australia',$event);">Australia</button>
+					<button type="button" class="btn btn-fltr" id="99"  (click)="countryClick('India',$event);">India</button>
+					<button type="button" class="btn btn-fltr" id="192"  (click)="countryClick('Singapore',$event);">Singapore</button>
+					<button type="button" class="btn btn-fltr" id="73"  (click)="countryClick('France',$event);">France</button>
+					<button type="button" class="btn btn-fltr" id="38"  (click)="countryClick('Canada',$event);">Canada</button>
+					<button type="button" class="btn btn-fltr" id="107"  (click)="countryClick('Japan',$event);">Japan</button>
+					<button type="button" class="btn btn-fltr" id="129"  (click)="countryClick('Malaysia',$event);">Malaysia</button>
+					<!-- <button type="button" class="btn btn-fltr bg-light">Others</button> -->
+				</div>
+			</div>
+		</div>
+	</div>
+	  <div class="row mt-2">
+		<div class="col-lg-10 col-md-6">
+			<div class=" form-group">
+				<label>{{"postYourResume.othercountry" | translate }} </label> 
+				<ngx-select
+					class="text-capitalize"
+					[placeholder]="'Other Country'"
+					[multiple]="true"
+					[items]="othercountry"
+					formControlName="authorized_country"
+					optionValueField="id"
+					optionTextField="nicename"
+					autoClearSearch="true"
+					noResultsFound="No results found"
+					 >
+				 <ng-template ngx-select-option-selected let-option let-text="text">
+				  {{option?.text ? option?.text?.split('-')[0] : ''}}
+				</ng-template>
 
+				<ng-template ngx-select-option let-option let-text="text">
+					{{option?.text}}
+				</ng-template>
+
+				<ng-template ngx-select-option-not-found>
+					Nothing found
+				</ng-template>
+				 </ngx-select>
+				<app-control-messages [control]="f['othercountry']"></app-control-messages>									  
+			</div>
+		</div>				
+		
+	</div>
+	 <div class="row mt-5">
+		<div class="col-lg-12 col-md-6">
+		  <label>{{"postYourResume.languageknown" | translate }}</label>
+		  <div appMarkAsterisk></div>
+		</div>
+	  </div> 	
+		<div class="row mt-2" *ngFor="let ticket of t.controls; let i = index; let last = last">
+		<ng-container [formGroup]="ticket">
+			<div class="col-lg-4 col-md-6">
+				<ngx-select
+				  class="text-capitalize"
+				  [placeholder]="'Select Language'"
+				  [items]="languageSource"
+				  formControlName="language"
+				  optionValueField="id"
+				  optionTextField="name"
+				  autoClearSearch="true"
+				  noResultsFound="No results found"
+				   >
+				   <ng-template ngx-select-option-selected let-option let-text="text">
+					{{option?.text ? option?.text?.split('-')[0] : ''}}
+				  </ng-template>
+
+				  <ng-template ngx-select-option let-option let-text="text">
+					  {{option?.text}}
+				  </ng-template>
+
+				  <ng-template ngx-select-option-not-found>
+					  Nothing found
+				  </ng-template>
+			   </ngx-select>
+			  <app-control-messages [control]="ticket['controls']['language']"></app-control-messages>
+		</div>
+		<div class="col-lg-3 col-md-4 mt-3">
+			<div class="custom-control custom-checkbox mr-sm-2 custom-control-inline">
+				<input type="checkbox" style="z-index: 999999;" formControlName="read" class="custom-control-input" id="read" name="read">
+				<label class="custom-control-label" for="Read">Read</label>
+			</div>
+			<div class="custom-control custom-checkbox mr-sm-2 custom-control-inline">
+				<input type="checkbox" style="z-index: 999999;" formControlName="write" class="custom-control-input" id="write" name="write">
+				<label class="custom-control-label" for="Write">Write</label>
+			 </div>
+			<div class="custom-control custom-checkbox mr-sm-2 custom-control-inline">
+				<input type="checkbox" style="z-index: 999999;"  formControlName="speak"  class="custom-control-input" id="speak" name="speak">
+				<label class="custom-control-label" for="Speak">Speak</label>
+			</div>
+		</div>		
+
+        
+        <div class="col-lg-2 col-md-4">
+          <button type="button" class="btn btn-outline-danger" 
+            style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemove(i)"><i class="fas fa-times"></i></button>
+          <button *ngIf="last" (click)="onDuplicate(i)" type="button" class="btn btn-outline-green "
+            style="margin-left: 20px;line-height: 1.75; padding: .5rem 1.0rem;"><i class="fas fa-plus"></i></button>
+        </div>
+      </ng-container>
+    </div>
+	
+	
+																				
+							
 
     <div class="row mt-4">
       <div class="col-lg-4 col-md-6">
@@ -191,10 +355,40 @@
         </div>
       </div>
     </div>
-
-
-
-
+	
+	<div class="row mt-5">
+		<div class="col-lg-12 col-md-6">
+		  <label>{{"postYourResume.addreference" | translate }}</label>
+		  <div ></div>
+		</div>
+	  </div> 	
+		<div class="row mt-2" *ngFor="let ticket of r.controls; let i = index; let last = last">
+		<ng-container [formGroup]="ticket">
+			<div class="col-lg-3 col-md-6">
+				<label>Name</label>
+				<input  formControlName="name" type="text" class="form-control text-capitalize" placeholder="Please Enter the Name">
+				<app-control-messages [control]="ticket['controls']['name']"></app-control-messages>
+		  </div>
+		  <div class="col-lg-3 col-md-6">
+				<label>Email</label>
+				<input formControlName="email" type="email"  class="form-control text-lowercase" placeholder="Please Enter the E-mail">
+				<app-control-messages [control]="ticket['controls']['email']"></app-control-messages>
+		  </div>
+		  <div class="col-lg-4 col-md-6">
+				<label>Company Name</label>
+				<input  formControlName="company_name" type="text" class="form-control text-capitalize" placeholder="Please Enter the Company Name">
+				<app-control-messages [control]="ticket['controls']['company_name']"></app-control-messages>
+		  </div>
+       
+        <div class="col-lg-2 col-md-6" style="margin-top:30px;">
+          <button type="button" class="btn btn-outline-danger" 
+            style="line-height: 1.75; padding: .5rem 1.0rem;" (click)="onRemoveR(i)"><i class="fas fa-times"></i></button>
+          <button *ngIf="last" (click)="onDuplicateR(i)" type="button" class="btn btn-outline-green "
+            style="margin-left: 20px;line-height: 1.75; padding: .5rem 1.0rem;"><i class="fas fa-plus"></i></button>
+        </div>
+      </ng-container>
+    </div>
+	
   </div>
 
 
